syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.api.notification.grpc";
option java_outer_classname = "NotificationProto";
option go_package = "./proto";

package notification;

service NotificationService {
  rpc SendEmail (EmailRequest) returns (EmailReply);
}

message EmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message EmailReply {
  bool success = 1;
  string message = 2;
}
